--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -8,13 +8,18 @@
     "\n",
     "1. Temperature generally drop with laptitude increase\n",
     "2. Observed trend 2\n",
-    "3. Observed trend 3"
+    "3. Observed trend 3\n",
+    "\n",
+    "\n",
+    "TODO: Run 500, output chart, match PDF"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 173,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -46,6 +51,7 @@
    "cell_type": "code",
    "execution_count": 174,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -133,9 +139,9 @@
     "for i in df_cities.index:\n",
     "    city = '{},{}'.format(*df_cities.loc[i, ['City Name', 'Country Code']])\n",
     "    url = BASE_URL + city\n",
+    "    print('Processing Record {} | {}\\n{}'.format(i, city, url))\n",
+    "    \n",
     "    response = requests.get(url)\n",
-    "    print('Processing Record {} | {}'.format(i, city))\n",
-    "    print(url)\n",
     "    if response.status_code != 200:\n",
     "        print('Weather not found for ' + city)\n",
     "        continue\n",
